--- a/client/src/pages/search.css
+++ b/client/src/pages/search.css
@@ -1,4 +1,6 @@
 .search {
     display: grid;
     grid-template-columns: 140px 1fr;
+    background-image: url("./record-image.jpeg");
+    background-size: 1920px
   }
