--- a/client/src/pages/search.css
+++ b/client/src/pages/search.css
@@ -2,5 +2,7 @@
     display: grid;
     grid-template-columns: 140px 1fr;
     /* background-image: url("./record-image.jpeg");
-    background-size: 100% */
+    background-size: cover;
+    background-attachment: scroll;
+    border-radius: 10px; */
   }
