--- a/client/src/pages/statistics.css
+++ b/client/src/pages/statistics.css
@@ -1,8 +1,6 @@
-/* .statistics {
+.statistics {
     display: grid;
     grid-template-columns: 140px 1fr;
-    background-image: url("./record-image.jpeg");
-    background-size: 100% 35%;
-    background-repeat: no-repeat;
-    background-position: 175px 0;
-  } */
+    background: linear-gradient(#e66465, #9198e5);
+    background-size: 100% 100%;
+}
