--- a/client/src/pages/statistics.css
+++ b/client/src/pages/statistics.css
@@ -4,3 +4,16 @@
     background: linear-gradient(#e66465, #9198e5);
     background-size: 100% 100%;
 }
+
+.example-style {
+  animation: fade-in 3s;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 100;
+  }
+}
