done with styling colors and stats page; moving components in search now

--- a/client/src/pages/search.css
+++ b/client/src/pages/search.css
@@ -1,8 +1,8 @@
 .search {
     display: grid;
     grid-template-columns: 140px 1fr;
-    background: rgb(108,213,255);
-    background: linear-gradient(0deg, rgba(108,213,255,1) 0%, rgba(255,237,166,1) 100%); 
+    /* background: rgb(108,213,255);
+    background: linear-gradient(0deg, rgba(108,213,255,1) 0%, rgba(255,237,166,1) 100%);  */
   }
 
 #recs {
