--- a/client/src/pages/statistics.css
+++ b/client/src/pages/statistics.css
@@ -10,6 +10,12 @@
   animation: fade-in 0.5s;
 }
 
+.tab {
+  -webkit-transition: margin 0.5s ease;
+  
+  transition: margin 0.5s ease;
+}
+
 @keyframes fade-in {
   from {
     opacity: 0;
